# utitools

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_DEV.md  generate_uti_csv.py  generate_uti_tree.py  pyproject.toml
.github/workflows/: python-package.yml
src/utitools/: __init__.py  uti.csv  uti.py  uti_tree.json
tests/: test_uti.py
